kubernetes/apps/vaultwarden/vaultwarden/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - vaultwarden.${DOMAIN}
  rules:
    - backendRefs:
        - name: vaultwarden
          namespace: vaultwarden
          port: 80
